[gd_scene load_steps=116 format=2]

[ext_resource path="res://Sprite/PersonagemFem/png/Idle__001.png" type="Texture" id=1]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__002.png" type="Texture" id=2]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__000.png" type="Texture" id=3]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__003.png" type="Texture" id=4]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__008.png" type="Texture" id=5]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__009.png" type="Texture" id=6]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__004.png" type="Texture" id=7]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__005.png" type="Texture" id=8]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__007.png" type="Texture" id=9]
[ext_resource path="res://Sprite/PersonagemFem/png/Idle__006.png" type="Texture" id=10]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__005.png" type="Texture" id=11]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__006.png" type="Texture" id=12]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__007.png" type="Texture" id=13]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__002.png" type="Texture" id=14]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__003.png" type="Texture" id=15]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__001.png" type="Texture" id=16]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__004.png" type="Texture" id=17]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__000.png" type="Texture" id=18]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__009.png" type="Texture" id=19]
[ext_resource path="res://Sprite/PersonagemFem/png/Attack__008.png" type="Texture" id=20]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_006.png" type="Texture" id=21]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_000.png" type="Texture" id=22]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_004.png" type="Texture" id=23]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_005.png" type="Texture" id=24]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_003.png" type="Texture" id=25]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_007.png" type="Texture" id=26]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_008.png" type="Texture" id=27]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_009.png" type="Texture" id=28]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_002.png" type="Texture" id=29]
[ext_resource path="res://Sprite/PersonagemFem/png/Climb_001.png" type="Texture" id=30]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__009.png" type="Texture" id=31]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__001.png" type="Texture" id=32]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__007.png" type="Texture" id=33]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__002.png" type="Texture" id=34]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__006.png" type="Texture" id=35]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__004.png" type="Texture" id=36]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__003.png" type="Texture" id=37]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__005.png" type="Texture" id=38]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__008.png" type="Texture" id=39]
[ext_resource path="res://Sprite/PersonagemFem/png/Dead__000.png" type="Texture" id=40]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_000.png" type="Texture" id=41]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_006.png" type="Texture" id=42]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_005.png" type="Texture" id=43]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_009.png" type="Texture" id=44]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_001.png" type="Texture" id=45]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_002.png" type="Texture" id=46]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_008.png" type="Texture" id=47]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_007.png" type="Texture" id=48]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_003.png" type="Texture" id=49]
[ext_resource path="res://Sprite/PersonagemFem/png/Glide_004.png" type="Texture" id=50]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__003.png" type="Texture" id=51]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__005.png" type="Texture" id=52]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__009.png" type="Texture" id=53]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__004.png" type="Texture" id=54]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__007.png" type="Texture" id=55]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__006.png" type="Texture" id=56]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__000.png" type="Texture" id=57]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__001.png" type="Texture" id=58]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__008.png" type="Texture" id=59]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Attack__002.png" type="Texture" id=60]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__001.png" type="Texture" id=61]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__004.png" type="Texture" id=62]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__000.png" type="Texture" id=63]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__002.png" type="Texture" id=64]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__008.png" type="Texture" id=65]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__005.png" type="Texture" id=66]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__006.png" type="Texture" id=67]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__009.png" type="Texture" id=68]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__007.png" type="Texture" id=69]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump_Throw__003.png" type="Texture" id=70]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__002.png" type="Texture" id=71]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__006.png" type="Texture" id=72]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__000.png" type="Texture" id=73]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__004.png" type="Texture" id=74]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__009.png" type="Texture" id=75]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__003.png" type="Texture" id=76]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__001.png" type="Texture" id=77]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__007.png" type="Texture" id=78]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__008.png" type="Texture" id=79]
[ext_resource path="res://Sprite/PersonagemFem/png/Jump__005.png" type="Texture" id=80]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__006.png" type="Texture" id=81]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__002.png" type="Texture" id=82]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__005.png" type="Texture" id=83]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__000.png" type="Texture" id=84]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__001.png" type="Texture" id=85]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__008.png" type="Texture" id=86]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__009.png" type="Texture" id=87]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__007.png" type="Texture" id=88]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__004.png" type="Texture" id=89]
[ext_resource path="res://Sprite/PersonagemFem/png/Slide__003.png" type="Texture" id=90]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__007.png" type="Texture" id=91]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__002.png" type="Texture" id=92]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__003.png" type="Texture" id=93]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__006.png" type="Texture" id=94]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__009.png" type="Texture" id=95]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__000.png" type="Texture" id=96]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__004.png" type="Texture" id=97]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__001.png" type="Texture" id=98]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__008.png" type="Texture" id=99]
[ext_resource path="res://Sprite/PersonagemFem/png/Run__005.png" type="Texture" id=100]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__002.png" type="Texture" id=101]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__003.png" type="Texture" id=102]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__005.png" type="Texture" id=103]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__004.png" type="Texture" id=104]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__001.png" type="Texture" id=105]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__000.png" type="Texture" id=106]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__006.png" type="Texture" id=107]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__008.png" type="Texture" id=108]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__007.png" type="Texture" id=109]
[ext_resource path="res://Sprite/PersonagemFem/png/Throw__009.png" type="Texture" id=110]
[ext_resource path="res://Script/Personagem.gd" type="Script" id=111]
[ext_resource path="res://Scene/BarraVida.tscn" type="PackedScene" id=112]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 39 ), ExtResource( 31 ) ],
"loop": false,
"name": "Morrendo",
"speed": 25.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Parado",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "Atacando",
"speed": 20.0
}, {
"frames": [ ExtResource( 84 ), ExtResource( 85 ), ExtResource( 82 ), ExtResource( 90 ), ExtResource( 89 ), ExtResource( 83 ), ExtResource( 81 ), ExtResource( 88 ), ExtResource( 86 ), ExtResource( 87 ) ],
"loop": true,
"name": "Deslizando",
"speed": 20.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 60 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 52 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 59 ), ExtResource( 53 ) ],
"loop": false,
"name": "PuloAtacando",
"speed": 20.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 77 ), ExtResource( 71 ), ExtResource( 76 ), ExtResource( 74 ), ExtResource( 80 ), ExtResource( 72 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 75 ) ],
"loop": false,
"name": "Pulando",
"speed": 10.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 61 ), ExtResource( 64 ), ExtResource( 70 ), ExtResource( 62 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 69 ), ExtResource( 65 ), ExtResource( 68 ) ],
"loop": false,
"name": "PuloJogando",
"speed": 15.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "Escalando",
"speed": 15.0
}, {
"frames": [ ExtResource( 106 ), ExtResource( 105 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 104 ), ExtResource( 103 ), ExtResource( 107 ), ExtResource( 109 ), ExtResource( 108 ), ExtResource( 110 ) ],
"loop": false,
"name": "Jogando",
"speed": 15.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 48 ), ExtResource( 47 ), ExtResource( 44 ) ],
"loop": true,
"name": "Planando",
"speed": 20.0
}, {
"frames": [ ExtResource( 96 ), ExtResource( 98 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 97 ), ExtResource( 100 ), ExtResource( 94 ), ExtResource( 91 ), ExtResource( 99 ), ExtResource( 95 ) ],
"loop": true,
"name": "Correndo",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.3311
height = 66.744

[sub_resource type="CircleShape2D" id=3]
radius = 49.2122

[node name="PersonagemMenina" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 1025
script = ExtResource( 111 )

[node name="BarraVida" parent="." instance=ExtResource( 112 )]
position = Vector2( -50, -145.359 )
scale = Vector2( 0.5, 0.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -62 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "Atacando"
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.15894, -54.4109 )
shape = SubResource( 2 )

[node name="RayCastDireito" type="RayCast2D" parent="."]
position = Vector2( 25.7282, -0.292694 )
cast_to = Vector2( 0, 5 )

[node name="RayCastEsquerdo" type="RayCast2D" parent="."]
position = Vector2( -15.7575, -0.572449 )
cast_to = Vector2( 0, 5 )

[node name="Area2DAtaqueEspada" type="Area2D" parent="."]
position = Vector2( 49.6918, -55.2273 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DAtaqueEspada"]
position = Vector2( 0, 1.33487 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 7.85724, -52.7557 )

[node name="Area2DCorpo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DCorpo"]
position = Vector2( 7.15894, -54.4109 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Area2DCorpo" to="." method="_on_Area2DCorpo_area_entered"]
